add new benchmarks and run them against java 17ea